<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_screen"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_info_text"
        style="@style/CommonTextView"
        android:gravity="center"
        android:text="@string/info_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="@dimen/spacing_60"
        android:layout_margin="@dimen/spacing_10"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/CommonTextView"
        android:layout_margin="@dimen/spacing_20"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@id/et_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <EditText
        android:id="@+id/et_user_name"
        style="@style/EditTextStyle"
        android:layout_margin="@dimen/spacing_10"
        app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_user_name"
        app:layout_constraintTop_toTopOf="@id/tv_user_name"/>

    <TextView
        android:id="@+id/tv_email"
        style="@style/CommonTextView"
        android:layout_marginTop="@dimen/spacing_25"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextStyle"
        android:layout_marginEnd="@dimen/spacing_10"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_user_name"
        app:layout_constraintTop_toTopOf="@id/tv_email"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_60"
        android:layout_margin="@dimen/spacing_30"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintVertical_bias="0"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="btn_login, tv_info_text"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tv_user_name, et_user_name, tv_email, et_email, btn_logout"/>

</androidx.constraintlayout.widget.ConstraintLayout>